# wifite32

./: MIGRATION_PLAN.md  README.md  build-all.sh  build-apk.py  build-apk.sh  termux-install.sh
android/: MOBILE_GUIDE.md  README.md  build.gradle  gradlew  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/layout/: activity_main.xml  (+5 more)
firmware/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/components/wifite_protocol/: CMakeLists.txt  proto.c  proto.h
firmware/main/: CMakeLists.txt  attack_handlers.c  attack_handlers.h  commands.c  commands.h  main.c  sdkconfig.defaults  transport.c  transport.h  wifi_radio.c  wifi_radio.h
host/: esp32_backend.py  pywifite32.py  transport.py
host/patches/: airmon_patch.py  airodump_patch.py
wifite32_flutter/: README.md  pubspec.yaml
wifite32_flutter/android/app/: build.gradle
wifite32_flutter/android/app/src/main/: AndroidManifest.xml
wifite32_flutter/ios/Runner/: Info.plist
wifite32_flutter/ios/Runner.xcodeproj/: project.pbxproj
wifite32_flutter/lib/: main.dart
wifite32_flutter/linux/: CMakeLists.txt  my_application.cc
wifite32_flutter/macos/Runner.xcodeproj/: project.pbxproj
wifite32_flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
wifite32_flutter/macos/Runner/Configs/: AppInfo.xcconfig
wifite32_flutter/test/: widget_test.dart
wifite32_flutter/web/: index.html  manifest.json
wifite32_flutter/windows/: CMakeLists.txt
wifite32_flutter/windows/runner/: Runner.rc  main.cpp
(+18 files in other folders)
